[project]
name = "bitcoin-wallet-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ecdsa (>=0.19.1,<0.20.0)",
    "base58 (>=2.1.1,<3.0.0)",
    "mnemonic (>=0.21,<0.22)",
    "bech32 (>=1.2.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
